# zcode

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_zh.md  install.sh  rust-toolchain.toml  todo.md  uninstall.sh
.github/workflows/: ci.yml
docs/: file_system_design.md  plan.md
src/: lib.rs  logging.rs  main.rs  workspace.rs
src/app/: mod.rs  theme.rs  workbench.rs
src/app/workbench/: bridge.rs  dnd_rules.rs  input.rs  interaction.rs  mod.rs  mouse.rs  mouse_route.rs  mouse_tracker.rs  paint.rs  palette.rs  render.rs  settings_parse.rs  tests.rs  tick.rs  util.rs
src/core/: command.rs  context.rs  event.rs  mod.rs  service.rs  text_window.rs  view.rs
src/editor/: input.rs  mod.rs  state.rs
src/editor/config/: config.rs  mod.rs
src/editor/core/: mod.rs  state.rs  text_model.rs  view.rs
src/editor/input/: command.rs  executor.rs  input.rs  keybinding.rs  mod.rs  mouse.rs  selection.rs
src/editor/layout/: layout.rs  mod.rs
src/file_system/: mod.rs
src/kernel/: action.rs  code_actions.rs  effect.rs  git.rs  language.rs  locations.rs  lsp_registry.rs  mod.rs  palette.rs  plugins.rs  problems.rs  search.rs  state.rs  store.rs  symbols.rs  terminal.rs
src/kernel/editor/: action.rs  bracket.rs  edit.rs  markdown.rs  mod.rs  mouse.rs  reducer.rs  search.rs  state.rs  syntax.rs  syntax_highlight_cache.rs  viewport.rs
src/kernel/language/: mod.rs
src/kernel/panel/: code_actions.rs  list_selection.rs  locations.rs  mod.rs  problems.rs  symbols.rs
src/kernel/services/: bus.rs  host.rs  mod.rs
src/kernel/store/: completion.rs  completion_rank.rs  completion_strategy.rs  context_menu.rs  explorer.rs  git.rs  lsp.rs  mod.rs  palette.rs  semantic.rs  theme_editor.rs  util.rs
src/models/: cursor_set.rs  edit_history.rs  edit_op.rs  file_tree.rs  mod.rs  selection.rs  text_buffer.rs
src/runtime/: message.rs  mod.rs  runtime.rs
src/services/: backup.rs  config.rs  keybinding.rs  mod.rs
src/services/file/: local.rs  mod.rs  provider.rs  service.rs
src/services/search/: global.rs  mod.rs  searcher.rs  service.rs
src/tui/: crossterm.rs  mod.rs  osc52.rs  terminal_guard.rs  view.rs  wakeup.rs
src/ui/: mod.rs  runtime.rs
src/ui/backend/: mod.rs  ratatui.rs  test.rs
src/ui/core/: color.rs  color_support.rs  geom.rs  id.rs  input.rs  layout.rs  mod.rs  painter.rs  runtime.rs  style.rs  theme.rs  theme_adapter.rs  tree.rs  widget.rs
src/ui/widgets/: menu.rs
src/views/: mod.rs
src/views/doc/: mod.rs
src/views/editor/: coord.rs  editor_group.rs  layout.rs  (+10 more)
tests/: install_scripts.rs  lsp_integration.rs  tui_e2e.rs
tests/fixtures/: markdown_showcase.md
tests/unit/: cli_startup_paths.rs
(+213 files in other folders)
