[package]
name = "zcode"
version = "0.1.0"
edition = "2021"
default-run = "zcode"

[dependencies]
ratatui = "0.28"
crossterm = "0.27"
ropey = "1.6.0"
unicode-segmentation = "1.10"
unicode-width = "0.1"
unicode-xid = "0.2"
slotmap = "1.0"
walkdir = "2.4"
rustc-hash = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "process", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3"
memchr = "2"
aho-corasick = "1"
ignore = "0.4"
regex = "1"
bytecount = "0.6"
memmap2 = "0.9"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.23.0"

[features]
perf = []
