[package]
name = "zcode"
version = "0.2.0"
edition = "2021"
default-run = "zcode"

[dependencies]
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.27", optional = true }
ropey = "1.6.0"
unicode-segmentation = "1.10"
unicode-width = "0.1"
unicode-xid = "0.2"
slotmap = "1.0"
rustc-hash = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "process", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lsp-server = "0.7"
lsp-types = "0.95"
memchr = "2"
ignore = "0.4"
regex = "1"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-go = "0.20"
tree-sitter-python = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
portable-pty = { version = "0.9.0", optional = true }
vt100 = { version = "0.16.2", optional = true }
signal-hook = "0.3"

[dev-dependencies]
tempfile = "3.23.0"
libc = "0.2"

[features]
terminal = ["dep:portable-pty", "dep:vt100"]
tui = ["dep:ratatui", "dep:crossterm", "terminal"]
default = ["tui"]
perf = []

[[bin]]
name = "zcode"
path = "src/main.rs"
required-features = ["tui"]

[[bin]]
name = "ui_bench"
path = "src/bin/ui_bench.rs"
required-features = ["tui", "perf"]
